[Mac][Material Design] Show light default favicon in Incognito mode.

The original MD bookmarks cl did not update the default bookmark
favicon to Material Design.

R=avi@chromium.org
BUG=613128

Review-Url: https://codereview.chromium.org/1993313002
Cr-Commit-Position: refs/heads/master@{#394851}

Former-commit-id: f108ab948c53674428f0a5a518a48a2a6d6b5198